[project]
name = "jupyter-data-fetch"
description = "fetch data from jupyter notebook"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    'jupyter_kernel_client',
    'pandas<3.0',
    "pillow", # JupyterImageCodecc才需要
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "jupyter_data_fetch/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["jupyter_data_fetch"]
include-package-data = true

[tool.hatch.build.targets.sdist]
include = ["jupyter_data_fetch*"]